log/build_2024-07-25_10-07-49/py_proj/stderr.log
  File "/home/sunny/ros2_ws/install/py_proj/lib/python3.10/site-packages/py_proj/proj_coordinate.py", line 57
    print(f"GGA.raw_data : {",".join(self.raw_data)}\n"
                             ^
SyntaxError: f-string: expecting '}'

